--- a/Goal 4 web pages/pageOne.html
+++ b/Goal 4 web pages/pageOne.html
@@ -37,7 +37,7 @@
 
             
              <div class="text-container">
-              <h1>The future of education</h1>   
+              <h1 class="title-test">The future of education</h1>   
                 <p>
                   The role of computing possesses a pivotal place in the future of education, and if harnessed will overcome the barriers of traditional teaching and elevate education. Whilst injecting computer-aided techniques to learning, it is critical to ensure inclusivity, equitability of the highest quality to promote lifelong educational opportunities for all as highlighted in the UN sustainability goal 4 (Lytras, Sarirete and Damiani, 2020)<a href="references.html#ref1"><sup>[1]</sup></a>. The classroom setting needs to adapt to meet the evolving learning styles of technological-savvy students. Online learning platforms achieve this through leveraging interactivity, accessibility, and an expansive library. Moreover, student engagement remains a key factor in education and eLearning not only heightens this but also promotes skill acquisition (Abuhassna, et al., 2020)<a href="references.html#ref2"><sup>[2]</sup></a>.  Online learning platforms will empower individuals internationally to engage in lifelong learning, which is a core principle of goal 4. By aiming for goal 4, we seek to improve education through the suited medium of technology whilst staying true to principles of learning.
                 </p>
@@ -56,7 +56,7 @@
     <section class="inclusive">
      <div>
         <div class="text2-container" class="inclusive">
-          <h1 id="inclusive-title">Inclusivity in education</h1>
+          <h1 class="">Inclusivity in education</h1>
           <p>
             The pursuit of higher education is linked with financial burdens often time neglecting capable students from difficult backgrounds. With the advent of online learning platforms, traditional degrees are becoming mirrored with online equivalent degrees often with more fiscal accessibility to the individual. This was illustrated by a 
             case from the University System of Georgia (USG) introduces an initiative that will, “Create a suite of online bachelor’s degrees by building on the success of USG’s eCore”, (Board of Regents of the University System of Georgia, 2013)<a href="references.html#ref3"><sup>[3]</sup></a> an online core curriculum used as one of the paths for further educational services. The USG reveals compelling figures:
@@ -70,10 +70,13 @@
             <p> This statement conveys to us path to inclusivity through tackling financial struggles. Given the vast difference in cost between traditional and online degrees, we optimistically speculate the potential future benefit when similar systems fully optimised and developed. It is now time to take advantage of the endless potential of eLearning, now that is growing more than ever (Image source 2), to open educational excellence to all globally and make sufficient progress towards the UN’s sustainability goal 4 with the aid of technology.</p>
           </p>
         </div>
+
+        <div class="image-container"> 
           <img class="inclusive section-img" src="images/LearningGraph.png" alt="" id="inclusive-img">
-           <p>
+           <p class="moadd-image-ref">
           <a href="references.html#img2" class="link-secondary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover container-fluid">Image<sup>[2]</a>
            </p>
+        </div>
       </div>
     </section>
   </main>
